# cppcourse

./: README.md
ABI/: abi.cpp  abi.md  endianess.cpp  pfr.cpp
ABI/examples/layout/: CMakeLists.txt  abi_structs_demo.cpp
ABI/examples/tmpl/: CMakeLists.txt  tmpl_version.h.in
ABI/examples/tmpl/src/: tmpl_impl.cpp
ABI/examples/tmpl/test/: CMakeLists.txt  tmpl_test.cpp
ABI/examples/tmpl/tmpl/: tmpl_api.h
class/: class.md
compiler/: compiler.md  slow.cpp
compiler/examples/cplusplus/: main.cpp
compiler/examples/cpp20/: CMakeLists.txt
compiler/examples/overflow/: main.cpp  main.py
compiler/examples/sanitize/: CMakeLists.txt  main.cpp
compiler/examples/single/: CMakeLists.txt  regular.cpp
compiler/examples/tool/: main.cpp
compiler/examples/ub/: main.cpp
compiler/examples/ub_return/: main.cpp
components/: components.md
components/cross/: avx.cpp  demo.c  demo.sh
components/examples/: CMakeLists.txt  aarch64-toolchain.cmake  avx.cpp  cross.sh  simple.sh  simple.txt  simple_s.txt  syscall.cpp
debug/: debug.md
debug/examples/dwarf/: main.cpp
debug/examples/hello/: hello.cpp
debug/examples/simple/: build.sh  gm5.cpp  main.cpp
debug/examples/single/: CMakeLists.txt  gm5.cpp  main.cpp
error/: error.cpp  error.md  error_boost175.cpp
fixed/: avx.cpp  div_zero.cpp  fixed.md  fp.py  gmp.cpp  if_constexp.cpp  mod_zero.cpp  nan.cpp  overflow.cpp  precision.cpp  ptrdiff.cpp  sizeof.cpp  surprise.cpp  ulp.cpp
floating/: exceptions.cpp  floating.md  long_double.cpp  snan.cpp
git/: git.md
git/components/: components.md  toolchain.cmake
git/precommit/: .pre-commit-config.yaml  .secrets.baseline  demo.sh  myfile.cpp
linker/: linker.md
linker/example/boost_dll/: CMakeLists.txt  gm5.cpp  main.cpp
linker/example/dynamic/: CMakeLists.txt  compile.sh  main.cpp  pow.cpp
linker/example/lm/: main.cpp
linker/example/order/: CMakeLists.txt  compile.sh  main.cpp  mul.cpp
linker/example/pragma_mismatch/: CMakeLists.txt  myexe.cpp  mylib.cpp  mylib.h
linker/template/: CMakeLists.txt  ReadMe.md
linker/template/include/tpl/: tpl.h
linker/template/src/: tpl.cpp  tpl_version.script
linker/template/test/: test_tpl.cpp
memory/: memory.md  memory2.md  memory3.md
memory/examples/heap/: brk_vs_mmap.cpp  debug_win.cpp  heap_bloat.cpp  heap_corrupt.cpp  heap_leak.cpp  heap_leak2.cpp
memory/examples/init/: main.cpp
memory/examples/stack/: main.cpp
memory/examples/tls/: main.cpp
multithreading/: multithreading.md
multithreading/examples/atomic/: main.cpp
multithreading/examples/gtest/: CMakeLists.txt  main.cpp
multithreading/examples/io/: main.cpp
multithreading/examples/magic_static/: main.cpp
multithreading/examples/order/: main.cpp
multithreading/examples/race/: main.cpp
multithreading/examples/spurious/: main.cpp
multithreading/images/: basics.avif  classes.avif
numbers/: floating.md  integers.md
numbers/examples/abs_puzzle/: main.cpp
numbers/examples/denormals/: main.cpp
numbers/examples/float_puzzle/: main.cpp
numbers/examples/gdb_mxcsr/: demo.gdb  main.cpp
numbers/examples/geo_accuracy/: main.cpp
numbers/examples/nan/: main.cpp
numbers/examples/reciprocal/: main.cpp
numbers/examples/rounding/: main.cpp
numbers/examples/sigfpe/: main.cpp
numbers/examples/simd_div0/: main.cpp
numbers/examples/simd_int/: main.cpp
numbers/examples/ub/: main.cpp
numbers/examples/ub2/: main.cpp
numbers/tools/float_visualizer/: index.html
preface/: preface.md
preprocessor/: A.h  B.h  debug1.cpp  debug2.cpp  gdal_.h  macro.cpp  preprocessor.md  slow.cpp  stringify.cpp  to_string.cpp
preprocessor/examples/: iwyu.txt  tidy.cpp  tidy_gtest.sh
preprocessor/examples/attributes/: auto.h  manual.h
preprocessor/examples/cir/: a.h  b.h  main.cpp
preprocessor/examples/clash/: string  strings.cpp
preprocessor/examples/defs/: CMakeLists.txt  add_one.cpp  add_one.h  main.cpp
preprocessor/examples/endian/: endian.cpp
preprocessor/examples/gdal/: main.cpp
preprocessor/examples/hierarchy/: hierarchy.cpp
preprocessor/examples/hierarchy/1/: 1.h
preprocessor/examples/hierarchy/1/2/: 2.h
preprocessor/examples/iwyu/: .clang-tidy  iwyu.cpp  iwyu2.cpp
preprocessor/examples/macro/: good.cpp  main.cpp
preprocessor/examples/mess/: main.cpp  tracker_api.h
preprocessor/examples/mess/tracker/: tracker_structs.h
preprocessor/examples/mess/tracker/manager/: tracker_manager.h
preprocessor/examples/mess/tracker_manager/: telem.h
preprocessor/examples/no_warn/: CMakeLists.txt  main.cpp
preprocessor/examples/no_warn/system/: systemheader.h
preprocessor/examples/pimpl/: my_class.h
preprocessor/examples/plat/: plat.cpp
preprocessor/examples/plat/1/: foo.h
preprocessor/examples/pragma/: main.cpp
preprocessor/examples/pragma/pragma/: pragma.cpp
preprocessor/examples/semicol/: semicolon.cpp
preprocessor/examples/slow/: slow.cpp
preprocessor/examples/stringify/: main.cpp
preprocessor/examples/test/: test.cpp  tester.h
preprocessor/examples/used_defs/: main1.cpp  main2.cpp
puzzle/: puzzle.csv  puzzle.md
python/pybind/: CMakeLists.txt  demo.cpp
templates/: point.cpp  point.py  templates.md
testing/: testing.md
testing/examples/boost/: tests.cpp
testing/images/: works_on_mypng
